@@ -1,0 +1,20 @@
+data_su_of_numbers_with_exponents
+loop_
+_positive_exp
+0.1E4(2)
+0.1E14(2)
+0.1E10(2)
+0.42E3(15)
+0.42E03(15)
+0.42E003(15)
+1.5E123(8)
+
+loop_
+_negative_exp
+0.1E-4(2)
+0.1E-14(2)
+0.1E-10(2)
+0.42E-3(15)
+0.42E-03(15)
+0.42E-003(15)
+1.5E-123(8)
