@@ -1,0 +1,5 @@
+Tests the way standard uncertainty (SU) values of numbers with exponents are
+handled. This tests increases code coverage, i.e., check that certain code
+fragments are executed at least once, however, it does not allow to check if
+the SU values were parsed correctly since currently there is no way to output
+the internal data structure of the parser.
