@@ -1,0 +1,1 @@
+[{'name': 'su_of_numbers_with_exponents', 'tags': ['_positive_exp', '_negative_exp'], 'values': {'_positive_exp': ['0.1E4(2)', '0.1E14(2)', '0.1E10(2)', '0.42E3(15)', '0.42E03(15)', '0.42E003(15)', '1.5E123(8)'], '_negative_exp': ['0.1E-4(2)', '0.1E-14(2)', '0.1E-10(2)', '0.42E-3(15)', '0.42E-03(15)', '0.42E-003(15)', '1.5E-123(8)']}, 'types': {'_positive_exp': ['FLOAT', 'FLOAT', 'FLOAT', 'FLOAT', 'FLOAT', 'FLOAT', 'FLOAT'], '_negative_exp': ['FLOAT', 'FLOAT', 'FLOAT', 'FLOAT', 'FLOAT', 'FLOAT', 'FLOAT']}, 'inloop': {'_positive_exp': 0, '_negative_exp': 1}, 'loops': [['_positive_exp'], ['_negative_exp']], 'save_blocks': [], 'cifversion': {'major': 1, 'minor': 1}, 'precisions': {'_positive_exp': [2000.0, 20000000000000.0, 2000000000.0, 150.0, 150.0, 150.0, 8e+122], '_negative_exp': [2e-05, 2e-15, 2.0000000000000002e-11, 0.00015, 0.00015, 0.00015, 8.000000000000001e-124]}}]
