@@ -1,0 +1,86 @@
+$VAR1 = [
+          {
+            'cifversion' => {
+                              'major' => 1,
+                              'minor' => 1
+                            },
+            'inloop' => {
+                          '_negative_exp' => 1,
+                          '_positive_exp' => 0
+                        },
+            'loops' => [
+                         [
+                           '_positive_exp'
+                         ],
+                         [
+                           '_negative_exp'
+                         ]
+                       ],
+            'name' => 'su_of_numbers_with_exponents',
+            'precisions' => {
+                              '_negative_exp' => [
+                                                   '2e-05',
+                                                   '2e-15',
+                                                   '2e-11',
+                                                   '0.00015',
+                                                   '0.00015',
+                                                   '0.00015',
+                                                   '8e-124'
+                                                 ],
+                              '_positive_exp' => [
+                                                   '2000',
+                                                   '20000000000000',
+                                                   '2000000000',
+                                                   '150',
+                                                   '150',
+                                                   '150',
+                                                   '8e+122'
+                                                 ]
+                            },
+            'save_blocks' => [],
+            'tags' => [
+                        '_positive_exp',
+                        '_negative_exp'
+                      ],
+            'types' => {
+                         '_negative_exp' => [
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT'
+                                            ],
+                         '_positive_exp' => [
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT',
+                                              'FLOAT'
+                                            ]
+                       },
+            'values' => {
+                          '_negative_exp' => [
+                                               '0.1E-4(2)',
+                                               '0.1E-14(2)',
+                                               '0.1E-10(2)',
+                                               '0.42E-3(15)',
+                                               '0.42E-03(15)',
+                                               '0.42E-003(15)',
+                                               '1.5E-123(8)'
+                                             ],
+                          '_positive_exp' => [
+                                               '0.1E4(2)',
+                                               '0.1E14(2)',
+                                               '0.1E10(2)',
+                                               '0.42E3(15)',
+                                               '0.42E03(15)',
+                                               '0.42E003(15)',
+                                               '1.5E123(8)'
+                                             ]
+                        }
+          }
+        ];
