@@ -1,0 +1,2 @@
+Tests the way standard uncertainty (SU) values of numbers with exponents are
+handled.
