@@ -7,6 +7,8 @@ cod-tools (unreleased)
         - unquoted values that consist only of digits followed by empty
           parentheses (e.g. "10()") are no longer incorrectly recognised as
           integers.
+        - the handling of standard uncertainty values that appear in numbers
+          with certain exponents.
 
 cod-tools (3.10.0)
 
